# oxi-gen

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml  release.yml  tag.yml
src/: lib.rs  main.rs
test/: data.csv  functest.rq  headless.csv  noheader.rq  split.csv  test.rq  unused.rq
tests/: main.rs
tests/fixtures/: data_100.csv  escaped_chars.csv  escaped_chars.rq  optional_field.csv  optional_field.rq  quoted_empty.csv  quoted_empty.rq  reification.csv  reification.rq  reification_annotation.rq  reification_iri.csv  reification_iri.rq  reification_iri_expected.ttl  reification_triple_term.rq  reification_triple_term_expected.ttl  splitfuncs.rq  successor_field.csv  successor_field.rq  with_dup.rq
