[package]
name = "oxi_tarql"
version = "0.1.6"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
clap = { version = "4.5.54", features = ["cargo"] }
csv = "1.4.0"
flate2 = "1.1.8"
oxrdf = "0.3.2"
oxrdfio = "0.2.2"
performance_measure = "2.0.0"
regex = "1.12.2"
spareval = "0.2.3"
spargebra = "0.4.3"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto ="fat"
panic = "abort"
codegen-units = 1
