[package]
name = "oxi_gen"
version = "0.4.1"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
clap = { version = "4.5.54", features = ["cargo"] }
csv = "1.4.0"
flate2 = "1.1.8"
num_cpus = "1.17.0"
oxrdf = { version = "0.3.3", features = ["rdf-12"] }
oxrdfio = { version = "0.2.5", features = ["rdf-12"] }
regex = "1.12.2"
spareval = { version = "~0.2.5", features = ["sparql-12"] }
spargebra = { version = "~0.4.5", features = ["sparql-12"] }

[profile.release]
lto ="fat"
panic = "abort"
codegen-units = 1
